--- a/styles/Slider.module.css
+++ b/styles/Slider.module.css
@@ -1,6 +1,6 @@
 .container {
 	height: calc(100vh - 100px);
-	background-color: #d1411e;
+	background-color: #a9371b; /*#d1411e;*/
 }
 
 .arrowContainer {
@@ -11,19 +11,23 @@
 	bottom: 0;
 	margin: auto;
 	cursor: pointer;
+	z-index: 2;
 }
 
 .wrapper {
 	width: 300vw;
 	height: 100%;
+	display: flex;
+	transition: all 1.5s ease-in-out;
 }
 
 .imgContainer {
 	width: 100vw;
-	height: 100%;
+	height:90%;
 	position: relative;
-	left: 200px;
-	top: 40px
+	top: 20px
+	
+	/*left: 200px;*/
 }
 
 .sliderImage {
